_notes/errbyfile/O00000OO0O000O.java.txt
ru\metaculture\protection\O00000OO0O000O.java:12: error: <anonymous 
ru.metaculture.protection.O00000OO0O000O$1> is not abstract and does not override abstract method 
O00000000(O00000OO0O00) in W233
      O00000OO0OO0 var3 = O00000000(o00000OO0O00, var2, new O00000OO0O0000.W233<String>() {
                                                                                          ^

  ru\metaculture\protection\O00000OO0O000O.java:12: error: <anonymous 
ru.metaculture.protection.O00000OO0O000O$1> is not abstract and does not override abstract method 
O00000000(O00000OO0O00) in W233
        O00000OO0OO0 var3 = O00000000(o00000OO0O00, var2, new O00000OO0O0000.W233<String>() {
                                                                                            ^
